--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@openzeppelin/contracts-ethereum-package": "^2.5.0",
-    "@openzeppelin/upgrades": "^2.8.0",
-    "@truffle/hdwallet-provider": "^1.4.1"
+    "@openzeppelin/contracts": "^3.4.0",
+    "@truffle/artifactor": "^4.0.84",
+    "@truffle/contract": "^4.2.25",
+    "@truffle/hdwallet-provider": "^1.4.1",
+    "truffle": "^5.1.65",
+    "truffle-flattener": "^1.5.0"
   },
   "devDependencies": {}
 }
