--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@truffle/contract": "^4.2.25",
     "@truffle/hdwallet-provider": "^1.4.1",
     "truffle": "^5.1.65",
+    "truffle-contract-size": "^2.0.1",
     "truffle-flattener": "^1.5.0"
   },
   "devDependencies": {}
