--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^3.4.0",
+    "@openzeppelin/contracts": "3.4.2",
     "@truffle/artifactor": "^4.0.84",
     "@truffle/contract": "^4.2.25",
     "@truffle/hdwallet-provider": "^1.4.1",
